update air conf for windows dev

--- a/.air.conf
+++ b/.air.conf
@@ -4,8 +4,8 @@ tmp_dir = "tmp"
 
 [build]
 args_bin = []
-bin = "./tmp/main"
-cmd = "go build -o ./tmp/main ./cmd/cloud-driver"
+bin = "./tmp/main.exe"
+cmd = "go build -o ./tmp/main.exe ./cmd/cloud-driver"
 delay = 1000
 exclude_dir = [
     "assets",
